[package]
name = "globetrotting"
version = "0.1.0"
authors = ["Keith Marshall <keith.marshall@enginegroup.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.41"
serde-aux = "0.6.1"
